--- a/css/about_me.css
+++ b/css/about_me.css
@@ -1,6 +1,6 @@
 /* CSS */
 .about-dynamic {
-    background: transparent;
+  background: radial-gradient(circle, rgb(12, 56, 79) 0%, rgba(8, 14, 19, 1) 150%);
     color: #fff !important;
     padding: 50px 20px;
     overflow: hidden;
