--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,6 @@
 
 header {
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   left: 0;
   width: 100%;
@@ -9,8 +9,7 @@ header {
 
 /* Navbar Styling */
 .navbar {
-  background: #0C384F;
-background: radial-gradient(circle,rgba(12, 56, 79, 1) 0%, rgba(8, 14, 19, 1) 100%);
+  background: radial-gradient(circle,rgba(12, 56, 79, 1) 0%, rgba(8, 14, 19, 1) 100%);
   backdrop-filter: blur(5px);
   box-shadow: 0px 5px 10px #00a6ff49;
 }
