--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@
   }
 body{
     font-family: 'MyFont', sans-serif;
-    background: #0C384F;
+    /* background: #0C384F; */
 background: radial-gradient(circle,rgba(12, 56, 79, 1) 0%, rgba(8, 14, 19, 1) 100%);
 position: sticky;
 top: 0;
