--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,6 @@
 
 header {
-  /* position: fixed; */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -9,17 +9,18 @@ header {
 
 /* Navbar Styling */
 .navbar {
-  background: radial-gradient(circle,rgba(12, 56, 79, 1) 0%, rgba(8, 14, 19, 1) 100%);
+  background: #0C384F;
+background: radial-gradient(circle,rgba(12, 56, 79, 1) 0%, rgba(8, 14, 19, 1) 100%);
   backdrop-filter: blur(5px);
   box-shadow: 0px 5px 10px #00a6ff49;
 }
 
 .navbar-brand {
-  max-width: 100px;
+  max-width: 80px;
 }
 
 .nav-icon {
-  width: 100%;
+  width: 80%;
   /* height: ; */
 }
 
