--- a/css/projects.css
+++ b/css/projects.css
@@ -154,7 +154,7 @@
   .project-content h3 {
     font-size: 1.1rem;
   }
-
+  
   .project-content p {
     font-size: 0.85rem;
   }
@@ -173,6 +173,9 @@
     grid-template-columns: 1fr;
   }
 
+  .project-card{
+    width: 260px;
+  }
   .modal h3 {
     font-size: 1.2rem;
   }
